<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="18dp"
    app:cardElevation="18dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_note_alert"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginVertical="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#572364"
                android:layout_marginHorizontal="10dp"
                android:text="@string/confirm_text_dialog_alert"/>

            <Button
                android:id="@+id/btnDecline"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:backgroundTint="#cca9dd"
                android:layout_marginHorizontal="10dp"
                android:text="@string/decline_text_dialog_alert"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>