<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNotesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/tv_title_add_category"
            android:textStyle="bold"

            android:textSize="20sp"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:hint="@string/et_hint_title_category"
            app:boxBackgroundMode="outline"
            app:boxBackgroundColor="#FFFFFFFF"
            app:boxStrokeWidthFocused="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:maxLength="30"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:padding="14dp"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:text="@string/btn_add_category"
            android:background="#572364"
            android:textColor="@color/white"
            android:textSize="18sp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>